Pose sliding tools improvements - bone system starts invisible #88340

Closed
opened 2021-05-17 09:47:47 +02:00 by Reiner Prokein · 17 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 461.09

Blender Version
Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-05-16 05:49, hash:

Worked before commit Animation: Pose sliding tools improvements, SHA-1: 9797b95f61

Improve the "In Betweens" tools:

  • Push Pose from Rest Pose
  • Relax Pose to Rest Pose
  • Push Pose from Breakdown
  • Relax Pose to Breakdown
  • Pose Breakdowner

Short description of error
The bones system starts now invisible when you use the In-Between tools. Before the commit the bones system stayed visible when entering the In-Between tools.

Exact steps for others to reproduce the error

Create a bones system
Create two keyframes
Switch to Pose mode
Go to Pose menu > In-Betweens and activate one of the tools
The bones system will vanish. You need to press H to reveal it.

EDIT, this also affects the In-Between tools in the tool shelf.

affected.jpg

2021-05-17 09-39-01.mp4

**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 461.09 **Blender Version** Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-05-16 05:49, hash: Worked before commit Animation: Pose sliding tools improvements, SHA-1: 9797b95f617561dc87b702e1bce829a551260689 Improve the "In Betweens" tools: - Push Pose from Rest Pose - Relax Pose to Rest Pose - Push Pose from Breakdown - Relax Pose to Breakdown - Pose Breakdowner **Short description of error** The bones system starts now invisible when you use the In-Between tools. Before the commit the bones system stayed visible when entering the In-Between tools. **Exact steps for others to reproduce the error** Create a bones system Create two keyframes Switch to Pose mode Go to Pose menu > In-Betweens and activate one of the tools The bones system will vanish. You need to press H to reveal it. EDIT, this also affects the In-Between tools in the tool shelf. ![affected.jpg](https://archive.blender.org/developer/F10116065/affected.jpg) [2021-05-17 09-39-01.mp4](https://archive.blender.org/developer/F10115909/2021-05-17_09-39-01.mp4)
Author

Added subscriber: @tiles

Added subscriber: @tiles
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Can confirm.

Can confirm.

Added subscriber: @ChrisLend

Added subscriber: @ChrisLend

This is technically not a bug
It was discussed during the bi weekly animation meeting that bones should be hidden during pose slide to remove visual clutter and so you can focus on the shape of the geometry

I see how it can be confusing though, and I'll bring it up again next week

This is technically not a bug It was discussed during the bi weekly animation meeting that bones should be hidden during pose slide to remove visual clutter and so you can focus on the shape of the geometry I see how it can be confusing though, and I'll bring it up again next week
Member

Changed status from 'Confirmed' to: 'Needs Developer To Reproduce'

Changed status from 'Confirmed' to: 'Needs Developer To Reproduce'
Member

Sorry, see it now being mentioned in the commit message.
And in fact, this is even mentioned in the status bar.

If this has gone through the module brains, then this is a different story [to me, it was very unexpected though]

Sorry, see it now being mentioned in the commit message. And in fact, this is even mentioned in the status bar. If this has gone through the module brains, then this is a different story [to me, it was very unexpected though]

Added subscriber: @ideasman42

Added subscriber: @ideasman42

I also though this was a bug, before looking into the commit further and realizing it was intended behavior #88337 (Pose Slide doesn't draw until complete).

I also though this was a bug, before looking into the commit further and realizing it was intended behavior #88337 (Pose Slide doesn't draw until complete).
Author

Friends, you need to see the pose to be able to push the pose to the needed result. When you can't see what you are doing then this feature is broken. Before this patch the behaviour was correct.

Friends, you need to see the pose to be able to push the pose to the needed result. When you can't see what you are doing then this feature is broken. Before this patch the behaviour was correct.

Added subscriber: @LucianoMunoz

Added subscriber: @LucianoMunoz

this is intended, as when you look at the pose you care about the pose of the deformed mesh (i e character) not the controllers/ bones.

this is intended, as when you look at the pose you care about the pose of the deformed mesh (i e character) not the controllers/ bones.

Changed status from 'Needs Developer To Reproduce' to: 'Resolved'

Changed status from 'Needs Developer To Reproduce' to: 'Resolved'
Luciano Muñoz Sessarego self-assigned this 2021-05-18 09:04:52 +02:00
Author

I see the resolved label here. But where is the solution?

For me it makes the In-Betweens useless when i cannot see the bones anymore. The pose is defined by the bones, not by the mesh.

I see the resolved label here. But where is the solution? For me it makes the In-Betweens useless when i cannot see the bones anymore. The pose is defined by the bones, not by the mesh.
Member

But where is the solution?

I assume the solution is the {key H} key as hinted at in the status bar.
(personally, I would have preferred to do it the other way around -- have it visible by default and use the {key H} key to hide, but I am not an animator)

> But where is the solution? I assume the solution is the {key H} key as hinted at in the status bar. (personally, I would have preferred to do it the other way around -- have it visible by default and use the {key H} key to hide, but I am not an animator)
Author

Ah, thanks. So basically it works as designed. And will not change anymore.

(I have rigged and animated thousands of meshes in my life if this is of some help. I understand that sometimes you want to have the bones out of the way. But sometimes not. This falls under personal preferences and workflow. But i am pretty sure that you will see equal bug reports that the bones are missing in the nearer future. That's why i have made this bug report. Just look at the comments here in the issue. Everybody else thought it is a bug too.

It is imho the wrong default now. It has changed from something well known and working to something unexpected. Now under some circumstances you cannot work anymore with the tools until you discover the H key to reveal the bones. It looks broken to somebody who is new to the tool. The other way around was how it worked just fine for many years. Easy to discover and working without any thinking under all circumstances.

But i don't want to discuss this to death. It's your decision. I was just curious if i have missed a commit. So thanks for the explanation :) )

Ah, thanks. So basically it works as designed. And will not change anymore. (I have rigged and animated thousands of meshes in my life if this is of some help. I understand that sometimes you want to have the bones out of the way. But sometimes not. This falls under personal preferences and workflow. But i am pretty sure that you will see equal bug reports that the bones are missing in the nearer future. That's why i have made this bug report. Just look at the comments here in the issue. Everybody else thought it is a bug too. It is imho the wrong default now. It has changed from something well known and working to something unexpected. Now under some circumstances you cannot work anymore with the tools until you discover the H key to reveal the bones. It looks broken to somebody who is new to the tool. The other way around was how it worked just fine for many years. Easy to discover and working without any thinking under all circumstances. But i don't want to discuss this to death. It's your decision. I was just curious if i have missed a commit. So thanks for the explanation :) )
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#88340
No description provided.